--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.10.2)
 project(Socket C)
 
 set(CMAKE_C_STANDARD 99)
 
 add_executable(Socket server.c)
-SET(CMAKE_C_FLAGS -pthread)
+target_link_libraries(Socket pthread)
